overflow fix

--- a/src/css/lea.css
+++ b/src/css/lea.css
@@ -5,12 +5,18 @@ body{font-family: Amaranth, sans-serif;
   -khtml-user-select: none;    /* Konqueror */
   -moz-user-select: none;      /* Firefox */
   -ms-user-select: none;       /* IE/Edge */
-  user-select: none;           /* non-prefixed version, currently not supported by any browser */}
+  user-select: none;           /* non-prefixed version, currently not supported by any browser */
+
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+  }
+
 
 header{
   background: #d9d9d9;
   width: 100%;
-  height: 15%;
+  /*height: 15%;*/
   padding-top: 1vh;
   padding-bottom: 1vh;
 
@@ -130,6 +136,7 @@ section{display: inline-block; position: relative;}
    transition: width cubic-bezier(0.01,0.5,0.25,1) 1s;
    overflow: hidden;
    box-shadow: 0px 9px 8px -8px rgba(0, 0, 0, 0.77) inset;
+
 }
 .boite{
   height: 70vh;
@@ -184,9 +191,9 @@ color:#222;
 font-family: 'Open Sans', sans-serif;
 display: inline-block;}
 
-#exp table tr:nth-child(odd){
-  background-color: #41ada2;
-}
+#exp table tr:nth-child(odd){  background-color: #41ada2;}
+#for table tr:nth-child(odd){  background-color: #93d58f;}
+#int table tr:nth-child(odd){  background-color: #CF8D56;}
 
 table tr td{ vertical-align: middle;}
 
